initial working site

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <li><a href="#register">register</a></li>
       <li><a href="#people">staff</a></li>
     </ul>
+    <div class="cl"></div>
   </header>
   <div class="cl"></div>
   <div id="hero">
@@ -20,68 +21,73 @@
       <h4>Examining the thought behind the image</h4>
     </div>
   </div>
-  <div class="description_block">
-    <h5 class="left">What.</h5>
-    <div class="description right">The Image, Deconstructed will hold a three-day workshop in conjunction with The University of North Carolina at Chapel Hill. Our mission is to help participants gain a better understanding of a purposeful, mental approach to visual communication.</div>
-    <div class="cl"></div>
-  </div>
-  <div class="description_block">
-    <h5 class="left">WHERE.</h5>
-    <div class="description right">
-      The University of North Carolina
-      Carroll Hall </br>
-      Chapel Hill, NC </br>
-      March 22-24 </br>
-      Workshop begins 9:30 am the 22nd, finishes 4pm Sunday the 24th.
+  <div class="description_container">
+    <div class="description_block">
+      <div class="description_hold">
+        <h5 class="left">What.</h5>
+        <div class="description right">The Image, Deconstructed will hold a three-day workshop in conjunction with The University of North Carolina at Chapel Hill. Our mission is to help participants gain a better understanding of a purposeful, mental approach to visual communication.</div>
+        <div class="cl"></div>
+      </div>
     </div>
-    <div class="cl"></div>
-  </div>
-  <div class="description_block">
-    <h5 class="left">INFO.</h5>
-    <div class="description right">Students are encouraged to bring their gear for some limited shooting exercises. </br> Time will be available for portfolio advice/feedback.</div>
-    <div class="cl"></div>
+    <div class="description_block">
+      <div class="fill"></div>
+      <div class="description_hold">
+        <h5 class="left">WHERE.</h5>
+        <div class="description right">
+          The University of North Carolina
+          Carroll Hall </br>
+          Chapel Hill, NC </br>
+          March 22-24 </br>
+          Workshop begins 9:30 am the 22nd, finishes 4pm Sunday the 24th.
+        </div>
+        <div class="cl"></div>
+      </div>
+    </div>
+    <div class="description_block">
+      <div class="description_hold">
+        <h5 class="left">INFO.</h5>
+        <div class="description right">Students are encouraged to bring their gear for some limited shooting exercises. </br> Time will be available for portfolio advice/feedback.</div>
+        <div class="cl"></div>
+      </div>
+    </div>
   </div>
   <div id="people">
     <ul>
-      <li class="active"><img src="/img/preston.jpeg"/>
+      <li><img src="/img/preston.jpeg" data-id="preston"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/chads.jpg"/>
+      <li><img src="/img/chads.jpg" data-id="chad"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/justincook.jpg"/>
+      <li><img src="/img/justincook.jpg" data-id="justin"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/logan1.jpg"/>
+      <li><img src="/img/logan1.jpg" data-id="logan"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/Martin_Smith_Rodden_1.jpg"/>
+      <li><img src="/img/Martin_Smith_Rodden_1.jpg" data-id="martin"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/melissa.jpg"/>
+      <li><img src="/img/melissa.jpg" data-id="melissa"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/pattie.jpg"/>
+      <li><img src="/img/pattie.jpg" data-id="pattie"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/ScottStrazzanteMug.jpg"/>
+      <li><img src="/img/ScottStrazzanteMug.jpg" data-id="scott"/>
         <div class="cover"></div>
       </li>
-      <li class=""><img src="/img/rosst.jpg"/>
+      <li><img src="/img/rosst.jpg" data-id="ross"/>
         <div class="cover"></div>
       </li>
     </ul>
     <div class="background"></div>
   </div>
   <div id="bio-wrap">
-    <div class="left image"><img src="/img/preston.jpeg"/></div>
-    <div class="left text">
-      <p class="bio">
-         <b>Preston Gannaway</b> has worked as a documentary newspaper photographer for more than 10 years. She worked for The Virginian-Pilot in Norfolk, Va., prior to that, she spent a year on staff at the Rocky Mountain News before its closure in 2009 and worked for the Concord Monitor in New Hampshire (2003-2008). Gannaway's documentary story on the St. Pierre family, Remember Me, was awarded the 2008 Pulitzer Prize for feature photography.
-        |
-         In 2011, Gannaway was named runner-up Photojournalist of the Year (Large Markets) by the National Press Photographer's Association. Her work has been honored in numerous other national and international competitions including Pictures of the Year International's One Week's Work and an award of excellence in Best Multimedia Project. A native of North Carolina, she began her career at the Coalfield Progress in rural southwest Virginia after earning a Bachelor of Arts in fine art photography at Virginia Intermont College.
-         </br> www.prestongannaway.com
-      </p>
+    <div class="left image"><img src=""/></div>
+    <div class="left text"><b class="name"></b>
+      <p class="bio"></p>
+      <p class="links"></p>
     </div>
     <div class="cl"></div>
   </div>
