--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <header>
     <ul id="nav" class="right">
       <li><a href="#about">about</a></li>
-      <li><a href="#register">register</a></li>
+      <li><a href="https://spb.io/s/UgSGF27RIJ">register</a></li>
       <li><a href="#people">staff</a></li>
     </ul>
     <div class="cl"></div>
@@ -21,6 +21,7 @@
       <h4>Examining the thought behind the image</h4>
     </div>
   </div>
+  <div class="register_container"><a href="https://spb.io/s/UgSGF27RIJ" class="register">Register Now</a></div>
   <div class="description_container">
     <div class="description_block">
       <div class="description_hold">
