add email and calendar

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 <div id="wrap">
   <header>
     <ul id="nav" class="right">
-      <li><a href="#about">about</a></li>
       <li><a href="https://spb.io/s/UgSGF27RIJ">register</a></li>
       <li><a href="#people">staff</a></li>
+      <li><a href="mailto:ross@imagedeconstructed.com" target="_blank">contact</a></li>
     </ul>
     <div class="cl"></div>
   </header>
@@ -50,6 +50,11 @@
         <div class="description right">Students are encouraged to bring their gear for some limited shooting exercises. </br> Time will be available for portfolio advice/feedback.</div>
         <div class="cl"></div>
       </div>
+    </div>
+  </div>
+  <div id="calendar-wrap">
+    <div class="inner">
+      <h5>Calendar.</h5><iframe src="https://www.google.com/calendar/embed?src=cv755f328lk0fn27lg4li26qjs%40group.calendar.google.com&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&mode=WEEK&showTz=0&ctz=America/New_York&dates=20130320%2F20130324" style="border: 0" width="600" height="300" frameborder="0" scrolling="no"></iframe>
     </div>
   </div>
   <div id="people">
