add hotel location and add myself to the website

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta property="og:image" content="http://www.tidworkshop.org/facebook.png"/>
     <meta property="og:site_name" content="The Image Deconstructed Workshop 2013"/>
     <meta property="og:description" content="The Image, Deconstructed will hold a three-day workshop in conjunction with The University of North Carolina at Chapel Hill. Our mission is to help participants gain a better understanding of a purposeful, mental approach to visual communication."/>
+    <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
+    <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
@@ -48,20 +50,24 @@
         <div class="cl"></div>
       </div>
     </div>
-    <div class="description_block">
-      <div class="description_hold">
-        <h5 class="left">INFO.</h5>
-        <div class="description right">Students are encouraged to bring their gear for some limited shooting exercises. </br> Time will be available for portfolio advice/feedback.</div>
-        <div class="cl"></div>
-      </div>
+  </div>
+  <div id="map-hold"></div>
+  <div class="description_block">
+    <div class="description_hold">
+      <h5 class="left">INFO.</h5>
+      <div class="description right">Students are encouraged to bring their gear for some limited shooting exercises. </br> Time will be available for portfolio advice/feedback.</div>
+      <div class="cl"></div>
     </div>
   </div>
   <div id="calendar-wrap">
     <div class="inner">
-      <h5>Calendar.</h5><iframe src="https://www.google.com/calendar/embed?src=cv755f328lk0fn27lg4li26qjs%40group.calendar.google.com&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&mode=WEEK&showTz=0&ctz=America/New_York&dates=20130320%2F20130324" style="border: 0" width="600" height="300" frameborder="0" scrolling="no"></iframe>
+      <h5>Calendar.</h5><iframe src="https://www.google.com/calendar/embed?src=cv755f328lk0fn27lg4li26qjs%40group.calendar.google.com&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&mode=MONTH&showTz=0&ctz=America/New_York&dates=20130320%2F20130324" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
     </div>
   </div>
   <div id="people">
+    <div class="inner">
+      <h5>The Staff.</h5>
+    </div>
     <ul>
       <li><img src="/img/preston.jpeg" data-id="preston"/>
         <div class="cover"></div>
@@ -70,6 +76,9 @@
         <div class="cover"></div>
       </li>
       <li><img src="/img/justincook.jpg" data-id="justin"/>
+        <div class="cover"></div>
+      </li>
+      <li><img src="/img/sam.jpg" data-id="sam"/>
         <div class="cover"></div>
       </li>
       <li><img src="/img/logan1.jpg" data-id="logan"/>
