add mike david to the site

--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,9 @@
       <li><img src="/img/rosst.jpg" data-id="ross"/>
         <div class="cover"></div>
       </li>
+      <li><img src="/img/miked.jpeg" data-id="mike"/>
+        <div class="cover"></div>
+      </li>
     </ul>
     <div class="background"></div>
   </div>
