--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,9 @@
       <li><img src="/img/miked.jpeg" data-id="mike"/>
         <div class="cover"></div>
       </li>
+      <li><img src="/img/jared.jpg" data-id="jared"/>
+        <div class="cover"></div>
+      </li>
     </ul>
     <div class="background"></div>
   </div>
