--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,9 @@
       <li><img src="/img/jared.jpg" data-id="jared"/>
         <div class="cover"></div>
       </li>
+      <li><img src="/img/deb.jpeg" data-id="deb"/>
+        <div class="cover"></div>
+      </li>
     </ul>
     <div class="background"></div>
   </div>
