add full up page

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 <div id="wrap">
   <header>
     <ul id="nav" class="right">
-      <li><a href="https://spb.io/s/UgSGF27RIJ">register</a></li>
+      <li><a href="/full.html">register</a></li>
       <li><a href="#people">staff</a></li>
       <li><a href="mailto:ross@imagedeconstructed.com" target="_blank">contact</a></li>
     </ul>
@@ -37,7 +37,8 @@
       <h4>Examining the thought behind the image</h4>
     </div>
   </div>
-  <div class="register_container"><a href="https://spb.io/s/UgSGF27RIJ" class="register">Register Now</a></div>
+  <div class="register_container"><a href="
+    /full.html" class="register">Register Now</a></div>
   <div class="description_container">
     <div class="description_block">
       <div class="description_hold">
